flexsdk/modules/asc/test/compiler/as3/Definitions/Packages/PackageDefImportErr.err

[Compiler] Error #1083: Syntax error: package is unexpected.
as3.Definitions.Packages.PackageDefImportErr.as, Ln 27, Col 1:
package foo {}
^

1 error found
